# camlot

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
analysis/src/: lib.rs
core/: Cargo.toml
core/src/: database.rs  hir.rs  lib.rs
crates/analysis/: Cargo.toml
crates/analysis/src/: definitions.rs  diagnostics.rs  document.rs  env.rs  inlay_hints.rs  lib.rs  selection_range.rs  semantic_tokens.rs  symbols.rs  type_env.rs
crates/core/: Cargo.toml
crates/core/src/: builtin.rs  database.rs  hir.rs  infer.rs  intern.rs  lib.rs  types.rs
crates/core/src/hir/: lower.rs  mod.rs  module.rs  pprint.rs
crates/core/src/hir/pprint/: mod.rs  pretty_lambda.rs  pretty_let.rs  pretty_type.rs
crates/core/src/infer/: env.rs  errors.rs  label.rs  mod.rs  normalize.rs  nth_ident.rs  tests.rs  unify.rs
crates/parser/: Cargo.toml  camlot.ungram  rideml.ungram
crates/parser/src/: ast.rs  event.rs  grammar.rs  handwritten_ast.rs  language.rs  lexer.rs  lib.rs  parser.rs  sink.rs  source.rs  token_set.rs
crates/parser/src/grammar/: block.rs  decl.rs  expr.rs  mod.rs  module_item.rs  params.rs  type_expr.rs
crates/parser/test_data/: block_with_let_stmt_and_expr_stmt.cml_cst  block_with_let_stmt_and_expr_stmt.rml_cst  block_with_let_stmt_and_trailing_expr.cml_cst  block_with_let_stmt_and_trailing_expr.rml_cst  def_block_as_expr.rml_cst  def_block_directly.rml_cst  parse_let.rml_cst  parse_let_nested.rml_cst
crates/repl/: Cargo.toml
crates/repl/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: handlers.rs  lsp.rs  main.rs  server.rs
crates/tests/: Cargo.toml  build.rs
crates/tests/src/: check.rs  main.rs
editors/vscode/: .gitignore  CHANGELOG.md  README.md  eslint.config.mjs  language-configuration.json  package.json  pnpm-lock.yaml
editors/vscode/src/: ctx.ts  extension.ts  hir.ts  syntax_tree.ts
examples/: all_syntax.cml  all_syntax.rml
examples/bad/: type_occurs.cml
examples/ok/: all_syntax.ccst  all_syntax.cml  all_syntax.hir.cml  applications.ccst  applications.cml  applications.hir.cml  blocks.ccst  blocks.cml  blocks.hir.cml  empty.ccst  fib.ccst  fib.cml  fib.hir.cml  lambdas.ccst  lambdas.cml  lambdas.hir.cml  literals.ccst  literals.cml  literals.hir.cml  params.ccst  params.cml  params.hir.cml  types.ccst  types.cml  types.hir.cml
parser/: Cargo.toml  rideml.ungram
parser/src/: ast.rs  event.rs  handwritten_ast.rs  language.rs  lexer.rs  lib.rs  marker.rs  parser.rs  sink.rs  source.rs
parser/src/grammar/: decl.rs  expr.rs  mod.rs  params.rs  type_expr.rs
parser/test_data/: parse_let.rml_cst
server/: Cargo.toml
server/src/: handlers.rs  lsp.rs  lsp_utils.rs  main.rs  server.rs
xtask/: Cargo.toml
xtask/src/: install.rs  main.rs  wasm.rs
xtask/src/sourcegen/: ast.rs  kinds.rs  mod.rs  util.rs
