[workspace]

resolver = "2"

members = [
    "xtask",
    "parser",
    "core",
    "server",
    "analysis",
 ]

[workspace.dependencies]
parser = { path = "./parser", version = "0.1.0" }
analysis = { path = "./analysis", version = "0.1.0" }

anyhow = "1.0.75"
indexmap = "2.1.0"
itertools = "0.12.0"
proc-macro2 = "1.0.70"
quote = "1.0.33"
ungrammar = "1.16.1"
xshell = "0.2.5"
rowan = "0.15.15"
logos = "0.12.0"
expect-test = "1.4.1"
la-arena = "0.3.1"
line-index = "0.1.1"
lsp-types = "0.95.0"
