[package]
name = "analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser.workspace = true
core.workspace = true

lsp-types.workspace = true
line-index.workspace = true
expect-test.workspace = true

[lints]
workspace = true
