[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser.workspace = true

la-arena.workspace = true
indexmap.workspace = true
expect-test.workspace = true
imbl = "3.0.0"
rand = "0.8.5"

[lints]
workspace = true
