[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser.workspace = true

la-arena.workspace = true
indexmap.workspace = true
expect-test.workspace = true
imbl = "5.0.0"
rand = "0.9.0"

[lints]
workspace = true
